--- a/public/act1/holiday-hack-orientation/index.html
+++ b/public/act1/holiday-hack-orientation/index.html
@@ -27,26 +27,26 @@ I’m the Chief of Staff at Counter Hack, making sure the right people are doing
     <meta itemprop="wordCount" content="209">
     <title>Holiday Hack Orientation :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/holiday-hack-orientation/index.xml" rel="alternate" type="application/rss+xml" title="Holiday Hack Orientation :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1762618829" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1762618829" defer></script>
-    <script src="/js/search-lunr.js?1762618829" defer></script>
-    <script src="/js/search.js?1762618829" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1762619484" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1762619484" defer></script>
+    <script src="/js/search-lunr.js?1762619484" defer></script>
+    <script src="/js/search.js?1762619484" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1762618829";
+      window.relearn.index_js_url="/searchindex.en.js?1762619484";
     </script>
-    <script src="/js/lunr/lunr.min.js?1762618829" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1762618829" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1762618829" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1762618829" defer></script>
+    <script src="/js/lunr/lunr.min.js?1762619484" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1762619484" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1762619484" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1762619484" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1762618829" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1762618829" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1762618829" rel="stylesheet">
-    <link href="/css/theme.css?1762618829" rel="stylesheet">
-    <link href="/css/format-html.css?1762618829" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1762619484" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1762619484" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1762619484" rel="stylesheet">
+    <link href="/css/theme.css?1762619484" rel="stylesheet">
+    <link href="/css/format-html.css?1762619484" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -131,7 +131,7 @@ I’m the Chief of Staff at Counter Hack, making sure the right people are doing
 <span class="btn cstyle link noborder notitle interactive"><a href="/act1/index.html" title="Act 1 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
-<span class="btn cstyle link noborder notitle interactive"><a href="/act1/its-all-about-defang/index.html" title="Its All About Defang (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a></span>
+<span class="btn cstyle link noborder notitle interactive"><a href="/act2/index.html" title="Act 2 (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-more" data-content-empty="hide" data-width-s="show" data-width-m="show" data-width-l="show">
 <span class="btn cstyle link noborder notitle interactive"><button onclick="toggleTopbarFlyout(this)" type="button" title="More"><i class="fa-fw fas fa-ellipsis-v"></i></button></span>
@@ -167,14 +167,14 @@ I’m the Chief of Staff at Counter Hack, making sure the right people are doing
 <hr>
 <p>Oh, one more thing! You can press Q and E to rotate the map around. It gives you a nice semi-3D view of the area - really helps when you need to look around buildings and objects. Pretty neat, right? Give it a spin!</p>
 <hr>
-<p><a href="#R-image-b2e0db60113c2c1c53a1501f3ae476f7" class="lightbox-link"><img alt="Talking to Lynn Schifano on the train" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-b2e0db60113c2c1c53a1501f3ae476f7"><img alt="Talking to Lynn Schifano on the train" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-1.png"></a></p>
+<p><a href="#R-image-76650a6615fae1deda02eb0fbe6891ed" class="lightbox-link"><img alt="Talking to Lynn Schifano on the train" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-76650a6615fae1deda02eb0fbe6891ed"><img alt="Talking to Lynn Schifano on the train" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-1.png"></a></p>
 <p>On one of my attempt to grab a screenshot, no character showed up:</p>
-<p><a href="#R-image-0eed83b3681bfbb93d94ba5994b78053" class="lightbox-link"><img alt="Somehow, no one was there to witness" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-0eed83b3681bfbb93d94ba5994b78053"><img alt="Somehow, no one was there to witness" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-2.png"></a></p>
+<p><a href="#R-image-9cd87821711235586225b3bd32187a00" class="lightbox-link"><img alt="Somehow, no one was there to witness" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-9cd87821711235586225b3bd32187a00"><img alt="Somehow, no one was there to witness" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-2.png"></a></p>
 <h2 id="terminal-1">Terminal 1</h2>
-<p><a href="#R-image-ae582808fa397d274ca439e093b98868" class="lightbox-link"><img alt="Terminal 1" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-ae582808fa397d274ca439e093b98868"><img alt="Terminal 1" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-3.png"></a></p>
+<p><a href="#R-image-dfa6c40328c9f2cd85a9142a9b107866" class="lightbox-link"><img alt="Terminal 1" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-dfa6c40328c9f2cd85a9142a9b107866"><img alt="Terminal 1" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-3.png"></a></p>
 
   <footer class="footline">
               <i class='fa-fw fas fa-calendar'></i> Nov 8, 2025
@@ -224,17 +224,7 @@ I’m the Chief of Staff at Counter Hack, making sure the right people are doing
         <div class="R-sidebarmenu R-shortcutmenu-main">
           <ul class="enlarge morespace collapsible-menu">
             <li class="parent " data-nav-url="/act1/index.html"><a class="padding" href="/act1/index.html">Act 1</a><ul id="R-subsections-8dc0c36ceefa45529ff4cf1f9bdc1f66" class="collapsible-menu">
-            <li class="active hidden " data-nav-url="/act1/holiday-hack-orientation/index.html"><a class="padding" href="/act1/holiday-hack-orientation/index.html">Holiday Hack Orientation</a></li>
-            <li class="" data-nav-url="/act1/its-all-about-defang/index.html"><a class="padding" href="/act1/its-all-about-defang/index.html">Its All About Defang</a></li>
-            <li class="" data-nav-url="/act1/neighborhood-watch-bypass/index.html"><a class="padding" href="/act1/neighborhood-watch-bypass/index.html">Neighborhood Watch Bypass</a></li>
-            <li class="" data-nav-url="/act1/santas-gift-tracking-service-port-mystery/index.html"><a class="padding" href="/act1/santas-gift-tracking-service-port-mystery/index.html">Santa&#39;s Gift Tracking Service Port Mystery</a></li>
-            <li class="" data-nav-url="/act1/visual-network-thinger/index.html"><a class="padding" href="/act1/visual-network-thinger/index.html">Visual Network Thinger</a></li>
-            <li class="" data-nav-url="/act1/visual-firewall-thinger/index.html"><a class="padding" href="/act1/visual-firewall-thinger/index.html">Visual Firewall Thinger</a></li>
-            <li class="" data-nav-url="/act1/intro-to-nmap/index.html"><a class="padding" href="/act1/intro-to-nmap/index.html">Intro to Nmap</a></li>
-            <li class="" data-nav-url="/act1/blob-storage-challenge-in-the-neighborhood/index.html"><a class="padding" href="/act1/blob-storage-challenge-in-the-neighborhood/index.html">Blob Storage Challenge in the Neighborhood</a></li>
-            <li class="" data-nav-url="/act1/spare-key/index.html"><a class="padding" href="/act1/spare-key/index.html">Spare Key</a></li>
-            <li class="" data-nav-url="/act1/the-open-door/index.html"><a class="padding" href="/act1/the-open-door/index.html">The Open Door</a></li>
-            <li class="" data-nav-url="/act1/owner/index.html"><a class="padding" href="/act1/owner/index.html">Owner</a></li></ul></li>
+            <li class="active hidden " data-nav-url="/act1/holiday-hack-orientation/index.html"><a class="padding" href="/act1/holiday-hack-orientation/index.html">Holiday Hack Orientation</a></li></ul></li>
             <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a></li>
             <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a></li>
           </ul>
@@ -254,8 +244,8 @@ I’m the Chief of Staff at Counter Hack, making sure the right people are doing
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1762618829" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1762618829" defer></script>
-    <script src="/js/theme.js?1762618829" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1762619484" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1762619484" defer></script>
+    <script src="/js/theme.js?1762619484" defer></script>
   </body>
 </html>
