--- a/public/act1/spare-key/index.html
+++ b/public/act1/spare-key/index.html
@@ -39,26 +39,26 @@ An admin accidentally uploaded an infrastructure config file that contains a lon
     <meta itemprop="wordCount" content="591">
     <title>Spare Key :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/spare-key/index.xml" rel="alternate" type="application/rss+xml" title="Spare Key :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1763288171" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1763288171" defer></script>
-    <script src="/js/search-lunr.js?1763288171" defer></script>
-    <script src="/js/search.js?1763288171" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1763825002" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1763825002" defer></script>
+    <script src="/js/search-lunr.js?1763825002" defer></script>
+    <script src="/js/search.js?1763825002" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1763288171";
+      window.relearn.index_js_url="/searchindex.en.js?1763825002";
     </script>
-    <script src="/js/lunr/lunr.min.js?1763288171" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1763288171" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1763288171" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1763288171" defer></script>
+    <script src="/js/lunr/lunr.min.js?1763825002" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1763825002" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1763825002" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1763825002" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763288171" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763288171" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763288171" rel="stylesheet">
-    <link href="/css/theme.css?1763288171" rel="stylesheet">
-    <link href="/css/format-html.css?1763288171" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763825002" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763825002" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763825002" rel="stylesheet">
+    <link href="/css/theme.css?1763825002" rel="stylesheet">
+    <link href="/css/format-html.css?1763825002" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -178,8 +178,8 @@ An admin accidentally uploaded an infrastructure config file that contains a lon
 
 <h1 id="spare-key">Spare Key</h1>
 
-<p><a href="#R-image-534afb028be395156159e6de049b2fcc" class="lightbox-link"><img alt="Barry Goose" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/barry-goose-noir.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-534afb028be395156159e6de049b2fcc"><img alt="Barry Goose" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/barry-goose-noir.png"></a></p>
+<p><a href="#R-image-4f68d7b308b7f8901afdf2bf839b9f66" class="lightbox-link"><img alt="Barry Goose" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/barry-goose-noir.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-4f68d7b308b7f8901afdf2bf839b9f66"><img alt="Barry Goose" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/barry-goose-noir.png"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Help Goose Barry near the pond identify which identity has been granted excessive Owner permissions at the subscription level, violating the principle of least privilege.</p>
@@ -192,23 +192,23 @@ An admin accidentally uploaded an infrastructure config file that contains a lon
 <p>Use Azure CLI to find the leak and report exactly where it lives.</p>
 </blockquote>
 <h2 id="spare-key-terminal">Spare Key Terminal</h2>
-<p><a href="#R-image-9c8758703acd8f5d113ba2758b051087" class="lightbox-link"><img alt="Start" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9c8758703acd8f5d113ba2758b051087"><img alt="Start" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-1.png"></a></p>
+<p><a href="#R-image-41c1a2b49e162ead8bef1d1a736da497" class="lightbox-link"><img alt="Start" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-41c1a2b49e162ead8bef1d1a736da497"><img alt="Start" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-1.png"></a></p>
 <h3 id="listing-all-resource-groups">Listing all resource groups</h3>
 <p>Prototype command:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az group list -o table</span></span></code></pre></div>
-<p><a href="#R-image-93b14c2e5e1ef853eb77308729cf2477" class="lightbox-link"><img alt="List groups" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-93b14c2e5e1ef853eb77308729cf2477"><img alt="List groups" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-2.png"></a></p>
+<p><a href="#R-image-0dc91f0ae0279ebfe3ff2e63bf5f35e9" class="lightbox-link"><img alt="List groups" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-0dc91f0ae0279ebfe3ff2e63bf5f35e9"><img alt="List groups" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-2.png"></a></p>
 <h3 id="finding-storage-accounts">Finding storage accounts</h3>
 <p>Prototype command:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az storage account list --resource-group rg-the-neighborhood -o table</span></span></code></pre></div>
-<p><a href="#R-image-b75ab9ad99e8636270d63221a23d24c4" class="lightbox-link"><img alt="Finding storage accounts" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-b75ab9ad99e8636270d63221a23d24c4"><img alt="Finding storage accounts" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-3.png"></a></p>
+<p><a href="#R-image-8462a161501b42347a680e1a56132c9c" class="lightbox-link"><img alt="Finding storage accounts" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-8462a161501b42347a680e1a56132c9c"><img alt="Finding storage accounts" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-3.png"></a></p>
 <h3 id="finding-a-website">Finding a website</h3>
 <p>Prototype command:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az storage blob service-properties show --account-name &lt;insert_account_name&gt; --auth-mode login</span></span></code></pre></div>
-<p><a href="#R-image-8b949e7332a5e567a193fa7a542825c0" class="lightbox-link"><img alt="Finding website" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-4.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-8b949e7332a5e567a193fa7a542825c0"><img alt="Finding website" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-4.png"></a></p>
+<p><a href="#R-image-a7f843c3dec01c0d888b4f7f138fd196" class="lightbox-link"><img alt="Finding website" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-4.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-a7f843c3dec01c0d888b4f7f138fd196"><img alt="Finding website" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-4.png"></a></p>
 <p>There is a website in storage account <em>neighboorhoodhoa</em></p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>neighbor@d224308072dc:~$ az storage blob service-properties show --account-name neighborhoodhoa --auth-mode login
 </span></span><span style="display:flex;"><span><span style="color:#f92672">{</span>
@@ -221,23 +221,23 @@ An admin accidentally uploaded an infrastructure config file that contains a lon
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az storage container list</span></span></code></pre></div>
 <p>This command isn&rsquo;t enough and we have to extend it arguments. Luckily, we can just look at the previous command and add the arguments <code>--account-name</code> and <code>--auth-mode</code> - like so:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az storage container list --account-name neighborhoodhoa --auth-mode login</span></span></code></pre></div>
-<p><a href="#R-image-97dae9998601a95afa62b4ac244749d1" class="lightbox-link"><img alt="Finding containers" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-5.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-97dae9998601a95afa62b4ac244749d1"><img alt="Finding containers" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-5.png"></a></p>
+<p><a href="#R-image-f275a1f16ac13fef4589a5ab1ff321f7" class="lightbox-link"><img alt="Finding containers" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-5.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-f275a1f16ac13fef4589a5ab1ff321f7"><img alt="Finding containers" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-5.png"></a></p>
 <h3 id="examining-files-in-static-website-container">Examining files in static website container</h3>
 <p>In this excersice we are not given a prototype command, however we are provided with the following hint:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>when using --container-name you might need <span style="color:#e6db74">&#39;&lt;name&gt;&#39;</span></span></span></code></pre></div>
 <p>However, by applying some forward thinking we can easily whip up a command following the query language logic - like so:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az storage blob list --container-name <span style="color:#e6db74">&#39;$web&#39;</span> --account-name neighborhoodhoa --auth-mode login</span></span></code></pre></div>
-<p><a href="#R-image-e2606a4ea08e0f241775671cfb45514a" class="lightbox-link"><img alt="Examining static website container" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-6.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-e2606a4ea08e0f241775671cfb45514a"><img alt="Examining static website container" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-6.png"></a></p>
+<p><a href="#R-image-ccdc362aae31aa78df392dab550f4f9b" class="lightbox-link"><img alt="Examining static website container" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-6.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ccdc362aae31aa78df392dab550f4f9b"><img alt="Examining static website container" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-6.png"></a></p>
 <h3 id="looking-at-files">Looking at files</h3>
 <p>Yet again we are not presented with a prototype command, but rather with a hint:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>hint: --file /dev/stdout | less will print to your terminal</span></span></code></pre></div>
 <p>By applying the same logic as previous and consulting ChatGPT, I ended up with this command to list a file:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az storage blob download --container-name <span style="color:#e6db74">&#39;$web&#39;</span> --account-name neighborhoodhoa --auth-modelo
 </span></span><span style="display:flex;"><span>gin --name <span style="color:#e6db74">&#39;iac/terraform.tfvars&#39;</span> --file /dev/stdout | less</span></span></code></pre></div>
-<p><a href="#R-image-baec18fe8dd4cdf61841fbfb31718e7c" class="lightbox-link"><img alt="Looking at files" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-6.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-baec18fe8dd4cdf61841fbfb31718e7c"><img alt="Looking at files" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-6.png"></a></p>
+<p><a href="#R-image-26c6b3887dc688f7cbbc4ac227288127" class="lightbox-link"><img alt="Looking at files" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-6.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-26c6b3887dc688f7cbbc4ac227288127"><img alt="Looking at files" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-6.png"></a></p>
 <p>The content of the file is:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-toml" data-lang="toml"><span style="display:flex;"><span><span style="color:#75715e"># Terraform Variables for HOA Website Deployment</span>
 </span></span><span style="display:flex;"><span><span style="color:#75715e"># Application: Neighborhood HOA Service Request Portal  </span>
@@ -363,6 +363,7 @@ An admin accidentally uploaded an infrastructure config file that contains a lon
             <li class="" data-nav-url="/act1/holiday-hack-orientation/index.html"><a class="padding" href="/act1/holiday-hack-orientation/index.html">Holiday Hack Orientation</a></li>
             <li class="" data-nav-url="/act1/santas-gift-tracking-service-port-mystery/index.html"><a class="padding" href="/act1/santas-gift-tracking-service-port-mystery/index.html">Santa&#39;s Gift Tracking Service Port Mystery</a></li>
             <li class="" data-nav-url="/act1/visual-network-thinger/index.html"><a class="padding" href="/act1/visual-network-thinger/index.html">Visual Network Thinger</a></li>
+            <li class="" data-nav-url="/act1/intro-to-nmap/index.html"><a class="padding" href="/act1/intro-to-nmap/index.html">Intro to Nmap</a></li>
             <li class="" data-nav-url="/act1/blob-storage-challenge-in-the-neighborhood/index.html"><a class="padding" href="/act1/blob-storage-challenge-in-the-neighborhood/index.html">Blob Storage Challenge in the Neighborhood</a></li>
             <li class="active " data-nav-url="/act1/spare-key/index.html"><a class="padding" href="/act1/spare-key/index.html">Spare Key</a></li>
             <li class="" data-nav-url="/act1/owner/index.html"><a class="padding" href="/act1/owner/index.html">Owner</a></li></ul></li>
@@ -385,8 +386,8 @@ An admin accidentally uploaded an infrastructure config file that contains a lon
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1763288171" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763288171" defer></script>
-    <script src="/js/theme.js?1763288171" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1763825002" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763825002" defer></script>
+    <script src="/js/theme.js?1763825002" defer></script>
   </body>
 </html>
