--- a/public/act1/holiday-hack-orientation/index.html
+++ b/public/act1/holiday-hack-orientation/index.html
@@ -31,26 +31,26 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
     <meta itemprop="wordCount" content="240">
     <title>Holiday Hack Orientation :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/holiday-hack-orientation/index.xml" rel="alternate" type="application/rss+xml" title="Holiday Hack Orientation :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1763288171" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1763288171" defer></script>
-    <script src="/js/search-lunr.js?1763288171" defer></script>
-    <script src="/js/search.js?1763288171" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1763825002" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1763825002" defer></script>
+    <script src="/js/search-lunr.js?1763825002" defer></script>
+    <script src="/js/search.js?1763825002" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1763288171";
+      window.relearn.index_js_url="/searchindex.en.js?1763825002";
     </script>
-    <script src="/js/lunr/lunr.min.js?1763288171" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1763288171" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1763288171" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1763288171" defer></script>
+    <script src="/js/lunr/lunr.min.js?1763825002" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1763825002" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1763825002" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1763825002" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763288171" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763288171" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763288171" rel="stylesheet">
-    <link href="/css/theme.css?1763288171" rel="stylesheet">
-    <link href="/css/format-html.css?1763288171" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763825002" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763825002" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763825002" rel="stylesheet">
+    <link href="/css/theme.css?1763825002" rel="stylesheet">
+    <link href="/css/format-html.css?1763825002" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -161,8 +161,8 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
 
 <h1 id="holiday-hack-orientation">Holiday Hack Orientation</h1>
 
-<p><a href="#R-image-e004b3f0746c7dec04dc78edca663321" class="lightbox-link"><img alt="Lynn Schifano" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/lynnschifano-portrait.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-e004b3f0746c7dec04dc78edca663321"><img alt="Lynn Schifano" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/lynnschifano-portrait.png"></a></p>
+<p><a href="#R-image-6f0f6f24b4de956fe3ec74595ec42293" class="lightbox-link"><img alt="Lynn Schifano" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/lynnschifano-portrait.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-6f0f6f24b4de956fe3ec74595ec42293"><img alt="Lynn Schifano" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/lynnschifano-portrait.png"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Meet Lynn Schifano on the train for a warm welcome and get ready for your journey around the Dosis Neighborhood.</p>
@@ -176,14 +176,14 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
 <hr>
 <p>Hey, think you can give this terminal a try? Just click on it and follow the instructions.</p>
 </blockquote>
-<p><a href="#R-image-54b614d0c50303a45f20d62fa8aea6a1" class="lightbox-link"><img alt="Talking to Lynn Schifano on the train" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-54b614d0c50303a45f20d62fa8aea6a1"><img alt="Talking to Lynn Schifano on the train" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-1.png"></a></p>
+<p><a href="#R-image-03d0d6af462b2cc154e2511c61c500d0" class="lightbox-link"><img alt="Talking to Lynn Schifano on the train" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-03d0d6af462b2cc154e2511c61c500d0"><img alt="Talking to Lynn Schifano on the train" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-1.png"></a></p>
 <p>On one of my attempt to grab a screenshot, no character showed up:</p>
-<p><a href="#R-image-5cd254d50c796f12774f1b7c7cbb200f" class="lightbox-link"><img alt="Somehow, no one was there to witness" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5cd254d50c796f12774f1b7c7cbb200f"><img alt="Somehow, no one was there to witness" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-2.png"></a></p>
+<p><a href="#R-image-5c47318135674cfd927c8c1bd75eb462" class="lightbox-link"><img alt="Somehow, no one was there to witness" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5c47318135674cfd927c8c1bd75eb462"><img alt="Somehow, no one was there to witness" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-2.png"></a></p>
 <h2 id="terminal-1">Terminal 1</h2>
-<p><a href="#R-image-6b4cbaa33af498e25d97519950f4654a" class="lightbox-link"><img alt="Terminal 1" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-6b4cbaa33af498e25d97519950f4654a"><img alt="Terminal 1" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-3.png"></a></p>
+<p><a href="#R-image-239c15208420552563a799881321e2de" class="lightbox-link"><img alt="Terminal 1" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-239c15208420552563a799881321e2de"><img alt="Terminal 1" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-3.png"></a></p>
 <h2 id="lynn-schifano-mission-debrief">Lynn Schifano mission debrief</h2>
 <blockquote>
 <p>Great work! Please, hop off the train and explore the neighborhood.</p>
@@ -243,6 +243,7 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
             <li class="active " data-nav-url="/act1/holiday-hack-orientation/index.html"><a class="padding" href="/act1/holiday-hack-orientation/index.html">Holiday Hack Orientation</a></li>
             <li class="" data-nav-url="/act1/santas-gift-tracking-service-port-mystery/index.html"><a class="padding" href="/act1/santas-gift-tracking-service-port-mystery/index.html">Santa&#39;s Gift Tracking Service Port Mystery</a></li>
             <li class="" data-nav-url="/act1/visual-network-thinger/index.html"><a class="padding" href="/act1/visual-network-thinger/index.html">Visual Network Thinger</a></li>
+            <li class="" data-nav-url="/act1/intro-to-nmap/index.html"><a class="padding" href="/act1/intro-to-nmap/index.html">Intro to Nmap</a></li>
             <li class="" data-nav-url="/act1/blob-storage-challenge-in-the-neighborhood/index.html"><a class="padding" href="/act1/blob-storage-challenge-in-the-neighborhood/index.html">Blob Storage Challenge in the Neighborhood</a></li>
             <li class="" data-nav-url="/act1/spare-key/index.html"><a class="padding" href="/act1/spare-key/index.html">Spare Key</a></li>
             <li class="" data-nav-url="/act1/owner/index.html"><a class="padding" href="/act1/owner/index.html">Owner</a></li></ul></li>
@@ -265,8 +266,8 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1763288171" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763288171" defer></script>
-    <script src="/js/theme.js?1763288171" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1763825002" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763825002" defer></script>
+    <script src="/js/theme.js?1763825002" defer></script>
   </body>
 </html>
